Bug 74105 - FILESAVE FILEOPEN MSO2010 DOCX : Preserve 'Numbered Lists - Start Numbering Value at 0'
Summary: FILESAVE FILEOPEN MSO2010 DOCX : Preserve 'Numbered Lists - Start Numbering ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-27 05:42 UTC by pallavi.jadhav
Modified: 2014-03-18 18:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Document contains text with "Numbered lists- starting from 0" (12.66 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-27 05:42 UTC, pallavi.jadhav
Details
Visual comparison between Original file and Roundtrip file. (272.94 KB, image/png)
2014-01-27 05:49 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-01-27 05:42:02 UTC
Created attachment 92833 [details]
Document contains text with "Numbered lists- starting from 0"

Steps to reproduce :
1] Open attached document in LO
2] Perform save_as
3] Open saved file in MSO2010

Current behavior :
Numbered lists, starting from 0 is not preserved. Instaed it starts form 1.

Expected behavior :
Numbered lists, starting from 0 should be preserved after RT.
Comment 1 pallavi.jadhav 2014-01-27 05:49:58 UTC
Created attachment 92834 [details]
Visual comparison between Original file and Roundtrip file.
Comment 2 Thomas van der Meulen [retired] 2014-01-31 13:03:18 UTC
Thank you for your bug report,
I can reproduce this bug, but wenn I open the file it already shows 1 instead of 0. 

Test details: 
Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
os: mac osx 10.9.1

and Microsoft office 2010 on Windows 8.1
Comment 3 pallavi.jadhav 2014-02-03 05:21:21 UTC
Yes, the problem is at both ends "Import" ans "Export".
Comment 4 Commit Notification 2014-02-25 09:15:11 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01826dc12550e7a4204034f7876c593726525b54

fdo#74105 : Prservation of Numbered lists-Starting with Value '0'



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jorendc 2014-03-18 18:13:31 UTC
Looks fixed, tested Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 87efec9cc27b18aa09e50c289b503ba1127eb0b8
TinderBox: Win-x86@39, Branch:master, Time: 2014-03-18_02:50:50

Kind regards,
Joren