fdo#74105 : Prservation of Numbered lists-Starting with Value '0'

Issue :
	  - DOCX containing Numbered lists- Strating with
            value '0' is not preserved after RT.
          - LO exports document with Numbered lists starting
            from '1' instead of '0'.
          - LO "Import" and "Export" need fixes.
          - If LO will imports correctly, export will get
            correct value.

       Implentation :
          - Added code at Import and Export side.
          - Added Export Unit test case to check that
            <w:start> is not present in numbering.xml
            for 0th level.

       NOTE : <w:start> is optional. If not mentioned
              Numbered lists starts from '0'.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7710

Change-Id: I30910c41fd188f30a1723cf8e07be5ea1cde1be0