sw/source/filter/ww8/docxattributeoutput.cxx
@@ -4434,10 +4434,15 @@ void DocxAttributeOutput::NumberingLevel( sal_uInt8 nLevel,
             FSNS( XML_w, XML_ilvl ), OString::number( nLevel ).getStr(),
             FSEND );
 
-    // start with the nStart value
-    m_pSerializer->singleElementNS( XML_w, XML_start,
-            FSNS( XML_w, XML_val ), OString::number( nStart ).getStr(),
-            FSEND );
+    // start with the nStart value. Do not write w:start if Numbered Lists
+    // starts from zero.As it's an optional parameter.
+    // refer ECMA 376 Second edition Part-1
+    if(!(0 == nLevel && 0 == nStart))
+    {
+        m_pSerializer->singleElementNS( XML_w, XML_start,
+                FSNS( XML_w, XML_val ), OString::number( nStart ).getStr(),
+                FSEND );
+    }
 
     // format
     OString aFmt( impl_NumberingType( nNumberingType ) );
